add chest inverntory insertion and code refactoring