@@ -22,6 +22,8 @@
 		<mockito.version>2.27.0</mockito.version>
 		<h2.version>1.4.199</h2.version>
 		<commons-io.version>2.6</commons-io.version>
+		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+		<jacoco-plugin.version>0.8.4</jacoco-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -132,13 +134,16 @@
 			<!-- surefire -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
 			</plugin>
 			<!-- jacoco -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.2</version>
+				<version>${jacoco-plugin.version}</version>
 				<executions>
 					<!-- unit tests -->
 					<execution>
